test/bad/lambdas/partial01.px

func f(g: String->String) def
    return

f(write@(_))
